kustomize-study/components/db/db-ui/pgadmin/pgadmin-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: pgadmin-service
spec:
  type: NodePort
  selector:
    component: pgadmin
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30001  # Optionally specify a nodePort or let Kubernetes choose one
